# portfolio-mlops-1

./: .gitignore  README.md  pyproject.toml
data/: download.py  parse.py
